--- a/Cotuong_online/app/src/main/AndroidManifest.xml
+++ b/Cotuong_online/app/src/main/AndroidManifest.xml
@@ -14,7 +14,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SignUp"></activity>
+        <activity android:name=".Watting"></activity>
+        <activity android:name=".Room" />
+        <activity android:name=".SignUp" />
         <activity android:name=".SignIn" />
         <activity android:name=".MainActivity">
             <intent-filter>
