--- a/Cotuong_online/app/src/main/AndroidManifest.xml
+++ b/Cotuong_online/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".Watting"></activity>
-        <activity android:name=".Room" />
+        <activity android:name=".Room"
+            android:windowSoftInputMode="adjustPan"/>
         <activity android:name=".SignUp" />
         <activity android:name=".SignIn" />
         <activity android:name=".MainActivity">
